# Fuzzing crate for the in-tree certinfo parser.
#
# This is a SEPARATE crate (not part of the main workspace) because
# `cargo fuzz` requires nightly Rust and pulls in `libfuzzer-sys`, which
# we don't want in the published wheel build.
#
# Run: cd rust_certinfo && cargo +nightly fuzz run parse_certificate
# See README.md in this directory for the full pre-merge gate procedure.
[package]
name = "certinfo-fuzz"
version = "0.0.0"
edition = "2021"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.certinfo]
path = "../.."

[[bin]]
name = "parse_certificate"
path = "fuzz_targets/parse_certificate.rs"
test = false
doc = false
bench = false
